docs/7.55/md/abenabap.md
---
title: "ABAP - Keyword Documentation"
description: |
  The ABAP keyword documentation describes the syntax and semantics of the keywords of programming languages provided by SAP on an Application Server ABAP(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenas_abap_glosry.htm 'Glossary Entry') (AS ABAP) of an ABAP system(https://help.sa
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm"
abapFile: "abenabap.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abenabap"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

ABAP - Keyword Documentation

The ABAP keyword documentation describes the syntax and semantics of the keywords of programming languages provided by SAP on an [Application Server ABAP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenas_abap_glosry.htm "Glossary Entry") (AS ABAP) of an [ABAP system](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_system_glosry.htm "Glossary Entry"). It also provides an introductory description of the environment of these languages and of language-related frameworks and the corresponding system classes.

-   Modeling

-   [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_dictionary.htm)
    ABAP Dictionary is a persistent repository of metadata used to describe data types, database tables, views, and similar objects that can be used in development objects such as ABAP [programs](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_program_glosry.htm "Glossary Entry") or [CDS entities](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_entity_glosry.htm "Glossary Entry"). This section of the ABAP keyword documentation provides a full description of the most important ABAP Dictionary objects that are relevant for the programming languages. It also includes documentation for the [Dictionary DDL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") used to define certain dictionary objects in the ABAP Development Tools (ADT).

-   [ABAP - Core Data Services](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds.htm)
    The ABAP Core Data Services (ABAP CDS) are the ABAP-specific implementation of SAP's [CDS](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_glosry.htm "Glossary Entry") concept. They are used to develop data models that go far beyond the capabilities of ABAP Dictionary. This section of the ABAP keyword documentation introduces the concepts of ABAP CDS and provides full descriptions of the programming languages used to define [CDS objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_object_glosry.htm "Glossary Entry") in the ABAP Development Tools (ADT), such as [CDS DDL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_ddl_glosry.htm "Glossary Entry"), [CDS DCL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_ddl_glosry.htm "Glossary Entry"), [CDS SDL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_sdl_glosry.htm "Glossary Entry"), or [CDS BDL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencds_bdl_glosry.htm "Glossary Entry").

-   Application Programming

-   [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm)
    The ABAP programming language (or [ABAP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_glosry.htm "Glossary Entry") for short) is the lends its name to the [Application Server ABAP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenas_abap_glosry.htm "Glossary Entry") (or AS ABAP) and many of its components. ABAP is the programming interface of an [AS ABAP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenas_abap_glosry.htm "Glossary Entry") and is used for the development of system programs and application programs that are usually based on objects in ABAP Dictionary or in ABAP CDS. This section of the ABAP keyword documentation provides a full description of the ABAP programming language and its object-oriented part, [ABAP Objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_objects_glosry.htm "Glossary Entry"). It also provides descriptions of the XML-based language elements for [simple transformations](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensimple_transformation_glosry.htm "Glossary Entry") and the language elements of the [dynpro flow logic](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendynpro_flow_logic_glosry.htm "Glossary Entry"), which can be used only in combination with ABAP.

-   Additional Information

-   [ABAP - Programming Guidelines](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_pgl.htm)
    Rules and hints on using ABAP.

-   [ABAP - Security Notes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_security.htm)
    Overview of potential security risks in ABAP programs.

-   [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennews.htm)
    List of release-specific changes and enhancements to ABAP and the other programming languages.

-   Alphabetic Directories

-   [ABAP − Glossary](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_glossary.htm)
    Terms in the ABAP environment, and their explanations.

-   [ABAP − Index](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_index.htm)
    Alphabetic index of the language elements of all programming languages described in the ABAP keyword documentation. If not noted otherwise, language elements are part of the ABAP programming language. Language elements in the other programming languages are noted accordingly.

-   [ABAP − Subject Directory](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_subjects.htm)
    Alphabetic index for searching by subject area.

-   [ABAP - Examples](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_examples.htm)
    Alphabetic list of executable ABAP example programs.

Hint

The programs and program extracts outlined in the ABAP keyword documentation are syntax examples and are not intended for use in a production system environment. The purpose of the source code examples is to enable a better explanation and visualization of the syntax and semantics of ABAP statements. SAP does not guarantee either the correctness or the completeness of the code. In addition, SAP takes no legal responsibility or liability for possible errors or their consequences, which occur through the use of the example programs.

The database tables of the flight data model used in the example programs can be filled using the program SAPBC\_DATA\_GENERATOR.